--- a/cSharpServer.csproj
+++ b/cSharpServer.csproj
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,9 +37,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AppLibrary">
-      <HintPath>D:\Programming\Library\AppLibrary\bin\Debug\AppLibrary.dll</HintPath>
-    </Reference>
     <Reference Include="MySql.Data, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\Programming\Work\Intelogy - Business Manager Schedule\Intelogy - Businesss Manager Schedule\bin\Release\MySql.Data.dll</HintPath>
@@ -52,9 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryBuffer.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="ClientArgument.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="IClientLogin.cs" />
     <Compile Include="IClientRequest.cs" />
     <Compile Include="Program.cs" />
