--- a/cSharpServer.csproj
+++ b/cSharpServer.csproj
@@ -39,7 +39,7 @@
   <ItemGroup>
     <Reference Include="MySql.Data, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\Programming\Work\Intelogy - Business Manager Schedule\Intelogy - Businesss Manager Schedule\bin\Release\MySql.Data.dll</HintPath>
+      <HintPath>..\..\..\Desktop\WAN\Server\pwWanServer\bin\Debug\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -60,11 +60,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="Firewall\IAddressEqual.cs" />
-    <Compile Include="Firewall\IpList.cs" />
-    <Compile Include="Firewall\Firewall.cs" />
-    <Compile Include="Firewall\IpAddress.cs" />
-    <Compile Include="Firewall\IpAddressRange.cs" />
+    <Compile Include="Features\IAddressEqual.cs" />
+    <Compile Include="Features\IpList.cs" />
+    <Compile Include="Features\Firewall.cs" />
+    <Compile Include="Features\IpAddress.cs" />
+    <Compile Include="Features\IpAddressRange.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
